--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Stelle-pasture</string>
     <string name="string_pasture_map">PastureMap</string>
-    <string name="string_show_location">Turn on High Accuracy in Location Settings</string>
+    <string name="string_show_location">Turn on High Accuracy in Location Settings and </string>
 </resources>
